--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ asgiref==3.8.1
 async-timeout==4.0.3
 Django==5.1.1
 django-cors-headers==4.4.0
+django-debug-toolbar==4.4.6
 django-redis==5.4.0
 djangorestframework==3.15.2
 ffmpeg==1.4
