--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,16 @@
 asgiref==3.8.1
 async-timeout==4.0.3
+click==8.1.7
 Django==5.1.1
 django-cors-headers==4.4.0
-django-debug-toolbar==4.4.6
 django-redis==5.4.0
+django-rq==2.10.2
 djangorestframework==3.15.2
 ffmpeg==1.4
 pillow==10.4.0
 psycopg2-binary==2.9.9
 python-decouple==3.8
 redis==5.1.0
+rq==1.16.2
 sqlparse==0.5.1
 typing_extensions==4.12.2
