--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,8 @@ django-redis==5.4.0
 django-rq==2.10.2
 djangorestframework==3.15.2
 ffmpeg==1.4
+gunicorn==23.0.0
+packaging==24.1
 pillow==10.4.0
 psycopg2-binary==2.9.9
 python-decouple==3.8
