--- a/.env.example
+++ b/.env.example
@@ -3,8 +3,8 @@ DJANGO_SECRET_KEY=your-secret-key
 
 ##for sending email to clients
 EMAIL_BACKEND=django.core.mail.backends.smtp.EmailBackend
-EMAIL_HOST=smtp.example.com
+EMAIL_HOST=smtp.gmail.com #smtp from your provider, google it! 
 EMAIL_PORT=587
 EMAIL_USE_TLS=True
-EMAIL_HOST_USER=your-email@example.com
-EMAIL_HOST_PASSWORD=your-password
+EMAIL_HOST_USER=#enter here your email from your provider
+EMAIL_HOST_PASSWORD=#enter here your password from your provider
