--- a/.env.example
+++ b/.env.example
@@ -6,5 +6,5 @@ EMAIL_BACKEND=django.core.mail.backends.smtp.EmailBackend
 EMAIL_HOST=smtp.gmail.com #smtp from your provider, google it! 
 EMAIL_PORT=587
 EMAIL_USE_TLS=True
-EMAIL_HOST_USER=#enter here your email from your provider
-EMAIL_HOST_PASSWORD=#enter here your password from your provider
+EMAIL_HOST_USER=enter here your email from your provider
+EMAIL_HOST_PASSWORD=enter here your password from your provider
